# src/main/java/es/jastxz/microPrimeNumbers/model/PointDouble.java
@@ -1,0 +1,9 @@
+package es.jastxz.microPrimeNumbers.model;
+
+import lombok.Data;
+
+@Data
+public class PointDouble {
+    private final double axisX;
+    private final double axisY;
+}
